# sdf-maker

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TESTING_SUMMARY.md  WINDOWS_FIXES.md
benches/: sdf_benchmarks.rs
examples/: benchmark.rs  simple_test.rs  verify_sdf.rs
src/: lib.rs  main.rs
src/batch/: mod.rs
src/cli/: mod.rs
src/core/: error.rs  mod.rs  multi_channel.rs  sdf.rs
src/core/algorithms/: brute_force.rs  feature_aware.rs  jfa.rs  mod.rs
src/gui/: mod.rs
tests/: integration_tests.rs
